fix overflows

--- a/frontend/assets/style/notifications.css
+++ b/frontend/assets/style/notifications.css
@@ -48,6 +48,7 @@ notification-center {
     flex-direction: column;
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 
 notification-item {
@@ -57,6 +58,7 @@ notification-item {
     padding-left: 15px;
     width: 100%;
     height: 10%;
+    min-height: 10%;
     /* background-color: rgba(56, 60, 78, 0.5); */
     border-bottom: 1px solid transparent;
     border-image: linear-gradient(to left,rgba(34, 37, 50, 0),#4B4B4D, rgba(34, 37, 50, 0));
